--- a/index.html
+++ b/index.html
@@ -54,6 +54,7 @@
 
 
   <!-- Header -->
+  <!--masthed d-flex가 bg-masthead.jpg랑 이어짐!-->
   <header class="masthead d-flex" style="font-family: 'Caladea', serif;">
     <div class="container text-center my-auto">
       <h1 class="mb-1" style="color:white">What do your customers think of your service?</h1>
@@ -72,7 +73,7 @@
       <div class="row">
         <div class="col-lg-10 mx-auto">
               <!-- <img class="img-fluid" src="img/logo2.png" width="400" alt=""> -->
-          <h2 style="font-family: 'Philosopher', sans-serif;">Green Tester?!</h2>
+          <h2 style="font-family: 'Philosopher', sans-serif;">Green Tester ?</h2>
           <p class="lead mb-5">IT 서비스들을 실제 사용자들에게 사용자 테스트를 진행해 드리는 서비스입니다.
           </p>
 
@@ -86,7 +87,7 @@
                                   <h4 class="text-uppercase m-0">사용자 테스트</h4>
                                   <hr class="my-4" />
                                   <!--text-black-숫자 에서 숫자에 따라 글씨 커지고 작아지고-->
-                                  <div class="small text-black-60" >고객의 의견, 개선점과 문제점, 버그/에러 등을 찾을 수 있습니다.</div>
+                                  <div class="small text-black-60" >현재 서비스에 대한 고객의 의견, 개선점과 문제점, 버그/에러 등을 찾을 수 있습니다.</div>
                               </div>
                           </div>
                       </div>
@@ -180,19 +181,19 @@
   </section>
 
   <!-- Portfolio 페이지 -->
-  <section class="content-section" id="portfolio" style="font-family: 'Nanum Gothic Coding', monospace;">
+  <section class="content-section bg-primary" id="portfolio" style="font-family: 'Nanum Gothic Coding', monospace;">
     <div class="container">
       <div class="content-section-heading text-center">
-        <h3 class="text-secondary mb-0">Tester</h3>
-        <h2 class="mb-5" style="font-family: 'Philosopher', sans-serif;">Recruiting!</h2>
+        <h3 class="text-secondary mb-0">How to start ?</h3>
+        <h2 class="mb-5" style="font-family: 'Philosopher', sans-serif;">Process !</h2>
       </div>
       <div class="row no-gutters">
         <div class="col-lg-6">
           <a class="portfolio-item" href="#">
             <span class="caption">
               <span class="caption-content">
-                <h2>Tester?</h2>
-                <p class="mb-0">A yellow pencil with envelopes on a clean, blue backdrop!</p>
+                <h2>Inquiry</h2>
+                <p class="mb-0">현재 베타서비스로 무료입니다. 자유롭게 문의주세요 !</p>
               </span>
             </span>
             <img class="img-fluid" src="img/portfolio-1.jpg" alt="">
@@ -202,8 +203,8 @@
           <a class="portfolio-item" href="#">
             <span class="caption">
               <span class="caption-content">
-                <h2>Necessary!</h2>
-                <p class="mb-0">A dark blue background with a colored pencil, a clip, and a tiny ice cream cone!</p>
+                <h2>Discuss Requests</h2>
+                <p class="mb-0">테스트를 통해 알고자 하는 점을 토의하고 그에 맞는 질문과 체크리스트를 구성하여 문서화 합니다.</p>
               </span>
             </span>
             <img class="img-fluid" src="img/portfolio-2.jpg" alt="">
@@ -213,8 +214,8 @@
           <a class="portfolio-item" href="#">
             <span class="caption">
               <span class="caption-content">
-                <h2>Process!</h2>
-                <p class="mb-0">Strawberries are such a tasty snack, especially with a little sugar on top!</p>
+                <h2>Test</h2>
+                <p class="mb-0">테스터들이 서비스를 직접 사용해보며 질문이 들어있는 문서에 서술형으로 답하여 문서를 작성합니다 !</p>
               </span>
             </span>
             <img class="img-fluid" src="img/portfolio-3.jpg" alt="">
@@ -224,8 +225,8 @@
           <a class="portfolio-item" href="#">
             <span class="caption">
               <span class="caption-content">
-                <h2>Return?</h2>
-                <p class="mb-0">A yellow workspace with some scissors, pencils, and other objects.</p>
+                <h2>Feedback</h2>
+                <p class="mb-0">테스트 결과에 대한 피드백을 그린테스터에 말해주세요. 현재 베타테스트로 더 발전하고자 합니다 ! </p>
               </span>
             </span>
             <img class="img-fluid" src="img/portfolio-4.jpg" alt="">
@@ -239,13 +240,13 @@
   
   <div class="section section-gray section-clients" style="font-family: 'Nanum Gothic Coding', monospace;">
     <div class="container text-center">
-        <h4 class="header-text">고객의 소리를 들은 서비스</h4>
+        <h4 class="header-text"><br>고객의 소리를 들은 서비스</h4>
         <p>
            <h4> Welcome to
         <em>your</em>
         customer-centered Service!</h4><br>
         </p>
-        <img class="img-fluid" src="img/customer.png" width="1000" alt="">
+        <img class="img-fluid" src="img/customer.png" width="800" alt="">
         <br>  <br>        <br>  <br>        <br>  <br>
     </div>
 </div>
@@ -258,8 +259,10 @@
       <h6 style="font-size: 20px;">E-mail: gajahcompany@gmail</h6>
       <br>
       <br>
-      <a href="#" class="btn btn-primary btn-xl btn-dark">제휴 문의</a>
-      <a href="#" class="btn btn-primary btn-xl btn-light mr-4">테스터 지원</a>
+      <dirv>
+        <a href="#" class="btn btn-primary btn-xl btn-dark">제휴 문의</a>
+        <a href="#" class="btn btn-primary btn-xl btn-light mr-4">테스터 지원</a>
+      </dirv>
     </div>
   </section>
 
