--- a/index.html
+++ b/index.html
@@ -242,9 +242,8 @@
     <div class="container text-center">
         <h4 class="header-text"><br>고객의 소리를 들은 서비스</h4>
         <p>
-           <h4> Welcome to
-        <em>your</em>
-        customer-centered Service!</h4><br>
+            <marquee direction="right"><h4> Welcome to <em>your</em> customer-centered Service!</h4><br></marquee>
+           
         </p>
         <img class="img-fluid" src="img/customer.png" width="800" alt="">
         <br>  <br>        <br>  <br>        <br>  <br>
