--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
                   <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#about"><b>Service</b></a></li>
                   <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#services"><b>Process</b></a></li>
                   <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#price"><b>Price</b></a></li>
-                  <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#portfolio"><b>Portfolio</b></a></li>
+                  <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#portfolio2"><b>Portfolio</b></a></li>
                   <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#Contact"><b>Contact Us</b></a></li>
               </ul>
           </div>
@@ -74,40 +74,42 @@
         <div class="col-lg-10 mx-auto">
               <!-- <img class="img-fluid" src="img/logo2.png" width="400" alt=""> -->
           <h2 style="font-family: 'Philosopher', sans-serif;">Green Tester ?</h2>
-          <p class="lead mb-5">IT 서비스들을 실제 사용자들에게 사용자 테스트를 진행해 드리는 서비스입니다.
+          <p class><br>그린테스터는 여러분의 아이디어를 마음껏 테스트하도록 돕습니다.
           </p>
-
+          <p>
+            <br><b>당신의 아이디어를 원하는 타겟에게 원하는 만큼 테스트 해보세요.</b>
+          </p>
           <section class="contact-section bg-black">
               <div class="container">
                   <div class="row">
                       <div class="col-md-4 mb-3 mb-md-0">
                           <div class="card py-4 h-100">
                               <div class="card-body text-center">
-                                  <i class="fas fa-map-marked-alt text-primary mb-2"></i>
+                                  <!-- <i class="fas fa-map-marked-alt text-primary mb-2"></i> -->
                                   <h4 class="text-uppercase m-0">사용자 테스트</h4>
                                   <hr class="my-4" />
                                   <!--text-black-숫자 에서 숫자에 따라 글씨 커지고 작아지고-->
-                                  <div class="small text-black-60" >현재 서비스에 대한 고객의 의견, 개선점과 문제점, 버그/에러 등을 찾을 수 있습니다.</div>
+                                  <div class="small text-black-60" >현재 서비스에 대한 사용자들의 의견, 개선점과 문제점, 버그/에러 등을 들어보세요.</div>
                               </div>
                           </div>
                       </div>
                       <div class="col-md-4 mb-3 mb-md-0">
                           <div class="card py-4 h-100">
                               <div class="card-body text-center">
-                                  <i class="fas fa-envelope text-primary mb-2"></i>
+                                  <!--<i class="fas fa-envelope text-primary mb-2"></i> -->
                                   <h4 class="text-uppercase m-0">테스터</h4>
                                   <hr class="my-4" />
-                                  <div class="small text-black-60">전문가가 아닌 우리의 서비스를 실제 사용하는 일반인들로 구성된 테스터들로써 시장 검증에 도움을 드릴 수 있습니다.</div>
+                                  <div class="small text-black-60">전문가가 아닌 서비스를 사용하는 일반인들로 구성된 테스터들로써 시장 검증에 도움을 드립니다.</div>
                               </div>
                           </div>
                       </div>
                       <div class="col-md-4 mb-3 mb-md-0">
                           <div class="card py-4 h-100">
                               <div class="card-body text-center">
-                                  <i class="fas fa-mobile-alt text-primary mb-2"></i>
+                                  <!-- <i class="fas fa-mobile-alt text-primary mb-2"></i>-->
                                   <h4 class="text-uppercase m-0">마케팅</h4>
                                   <hr class="my-4" />
-                                  <div class="small text-black-60">초기 마케팅을 도움이 됩니다.</div>
+                                  <div class="small text-black-60">테스터들을 통해 자연스러운 초기 마케팅에 도움이 됩니다.</div>
                               </div>
                           </div>
                       </div>
@@ -124,8 +126,8 @@
   <section class="content-section bg-primary text-white text-center" id="services" style="font-family: 'Nanum Gothic Coding', monospace;" >
     <div class="container">
       <div class="content-section-heading">
-        <h3 class="text-secondary mb-0">How to start?</h3>
-        <h2 class="mb-5" style="font-family: 'Philosopher', sans-serif;">Process</h2>
+        <h3 class="text-secondary mb-0">Process 1</h3>
+        <h2 class="mb-5" style="font-family: 'Philosopher', sans-serif;">서비스 전체 진행 절차</h2>
       </div>
       <div class="row">
         <div class="col-lg-3 col-md-6 mb-5 mb-lg-0">
@@ -164,81 +166,88 @@
           </h4>
           <p class="text-faded mb-0">테스트 결과에 대한 피드백을 <br> 그린테스터에게 말씀해 주세요! <i class="fas fa-heart"></i></p>
         </div>
-      </div>
+
+       </div>
     </div>
+
+    
+
+      <section class="content-section bg-primary" id="portfolio" style="font-family: 'Nanum Gothic Coding', monospace;">
+          <div class="container">
+            <div class="content-section-heading text-center">
+              <h3 class="text-secondary mb-0">Process 2</h3>
+              <h2 class="mb-5" style="font-family: 'Philosopher', sans-serif;">테스트 진행 방법</h2>
+            </div>
+            <div class="row no-gutters">
+              <div class="col-lg-6">
+                <a class="portfolio-item" href="#">
+                  <span class="caption">
+                    <span class="caption-content">
+                      <h2>테스터 선택</h2>
+                      <p class="mb-0">타겟에 맞는 테스터들을 직접 선택해 보세요 !</p>
+                    </span>
+                  </span>
+                  <img class="img-fluid" src="img/portfolio-1.jpg" alt="">
+                </a>
+              </div>
+              <div class="col-lg-6">
+                <a class="portfolio-item" href="#">
+                  <span class="caption">
+                    <span class="caption-content">
+                      <h2>질문 사항 정리</h2>
+                      <p class="mb-0">테스트를 통해 알고자 하는 점을 토의하고 그에 맞는 질문과 체크리스트를 구성하여 문서화 합니다.</p>
+                    </span>
+                  </span>
+                  <img class="img-fluid" src="img/portfolio-2.jpg" alt="">
+                </a>
+              </div>
+              <div class="col-lg-6">
+                <a class="portfolio-item" href="#">
+                  <span class="caption">
+                    <span class="caption-content">
+                      <h2>테스트 진행</h2>
+                      <p class="mb-0">테스터들이 서비스를 직접 사용해보며 질문이 들어있는 문서에 서술형으로 답하여 문서를 작성합니다 !</p>
+                    </span>
+                  </span>
+                  <img class="img-fluid" src="img/portfolio-3.jpg" alt="">
+                </a>
+              </div>
+              <div class="col-lg-6">
+                <a class="portfolio-item" href="#">
+                  <span class="caption">
+                    <span class="caption-content">
+                      <h2>테스터 평가</h2>
+                      <p class="mb-0" style="color:rgb(63, 121, 41)">테스트 결과에 대한 테스터들 직접 평가해 주세요 ! </p>
+                    </span>
+                  </span>
+                  <img class="img-fluid" src="img/portfolio-4.jpg" alt="">
+                </a>
+              </div>
+            </div>
+          </div>
+        </section>
   </section>
 
   <!-- Price 가격 소개 페이지 -->
   <section class="callout" id="price" style="font-family: 'Nanum Gothic Coding', monospace;">
     <div class="container text-center">
-      <h2 class="mx-auto mb-5 " style="font-family: 'Philosopher', sans-serif;" >Price<br>
-         <h3><span style="color:rgb(243, 173, 61)"> 베타 테스트</span>로 모든 비용은 무료로 진행됩니다.
+      <h2 class="mx-auto mb-5 " style="font-family: 'Philosopher', sans-serif; font-size: 30px" >고객의 의견을 무료로 들어 보세요 !<br>
+         <h3 style="font-size:15px"><span style="color:rgb(243, 173, 61)"> 베타 테스트</span>로 모든 비용은 무료로 진행됩니다. <br>그린 테스터와 함께 당신의 서비스에 대한 고객의 의견을 들어보세요.
         </h3>
-      </h2><br>
-      <h6>* 결과 만족도에 따라 그린테스터의 발전을 위해 지원금을 자유롭게 주시면 됩니다.</h6>
-      <br><a class="btn btn-primary btn-xl" href="https://startbootstrap.com/template-overviews/stylish-portfolio/">테스트 하러 가기!</a>
-    </div>
+      </h2><br><br>
+      <a href="index2.html" style="color:green" target="_blank"><b>테스트 하러 가기! </b></a><br><br>
+      <h6>* 현재 테스터들은 20대로만 구성되어 있어 서비스의 타겟이 20대인 서비스만 테스트가 가능합니다.</h6><br><br>
+      <img class="img-fluid" src="img/TestIcon.jpg" width="600" alt="">
+      <!-- <br><a class="btn btn-primary btn-xl" href="https://startbootstrap.com/template-overviews/stylish-portfolio/">테스트 하러 가기!</a>
+   -->
+      </div>
   </section>
 
-  <!-- Portfolio 페이지 -->
-  <section class="content-section bg-primary" id="portfolio" style="font-family: 'Nanum Gothic Coding', monospace;">
-    <div class="container">
-      <div class="content-section-heading text-center">
-        <h3 class="text-secondary mb-0">How to start ?</h3>
-        <h2 class="mb-5" style="font-family: 'Philosopher', sans-serif;">Process !</h2>
-      </div>
-      <div class="row no-gutters">
-        <div class="col-lg-6">
-          <a class="portfolio-item" href="#">
-            <span class="caption">
-              <span class="caption-content">
-                <h2>Inquiry</h2>
-                <p class="mb-0">현재 베타서비스로 무료입니다. 자유롭게 문의주세요 !</p>
-              </span>
-            </span>
-            <img class="img-fluid" src="img/portfolio-1.jpg" alt="">
-          </a>
-        </div>
-        <div class="col-lg-6">
-          <a class="portfolio-item" href="#">
-            <span class="caption">
-              <span class="caption-content">
-                <h2>Discuss Requests</h2>
-                <p class="mb-0">테스트를 통해 알고자 하는 점을 토의하고 그에 맞는 질문과 체크리스트를 구성하여 문서화 합니다.</p>
-              </span>
-            </span>
-            <img class="img-fluid" src="img/portfolio-2.jpg" alt="">
-          </a>
-        </div>
-        <div class="col-lg-6">
-          <a class="portfolio-item" href="#">
-            <span class="caption">
-              <span class="caption-content">
-                <h2>Test</h2>
-                <p class="mb-0">테스터들이 서비스를 직접 사용해보며 질문이 들어있는 문서에 서술형으로 답하여 문서를 작성합니다 !</p>
-              </span>
-            </span>
-            <img class="img-fluid" src="img/portfolio-3.jpg" alt="">
-          </a>
-        </div>
-        <div class="col-lg-6">
-          <a class="portfolio-item" href="#">
-            <span class="caption">
-              <span class="caption-content">
-                <h2>Feedback</h2>
-                <p class="mb-0">테스트 결과에 대한 피드백을 그린테스터에 말해주세요. 현재 베타테스트로 더 발전하고자 합니다 ! </p>
-              </span>
-            </span>
-            <img class="img-fluid" src="img/portfolio-4.jpg" alt="">
-          </a>
-        </div>
-      </div>
-    </div>
-  </section>
+  
 
 
   
-  <div class="section section-gray section-clients" style="font-family: 'Nanum Gothic Coding', monospace;">
+  <div class="section section-gray section-clients" id="portfolio2" style="font-family: 'Nanum Gothic Coding', monospace; " >
     <div class="container text-center">
         <h4 class="header-text"><br>고객의 소리를 들은 서비스</h4>
         <p>
