--- a/index.html
+++ b/index.html
@@ -298,7 +298,7 @@
                   <span style="font-size:20px; color: grey ; font-family:'Cinzel', serif;">  Tester</span>
                 </a>
            </nav>
-          <br><br> <img class="img-fluid" src="img/logo.png" width="200" alt=""><br>
+          <br><br> <img class="img-fluid" src="img/bottomlogo.png" width="200" alt=""><br>
            <div class="copyright">
               <span style="font-size:15px; text-emphasis-position: center">Copyright &copy; GAJAH 2019. All Rights Reserved</span>
               <br><span style="font-size:15px; text-emphasis-position: center">gajahcompany@gmail.com</span>
