--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
         <h5 style="color: white; font-family: 'Noto Sans KR', sans-serif;"> <br>그린테스터로 확인하세요 !</h5>
       </h3>
       <a class = "js-scroll-trigger" href="#about" style="color:green" ><b></b></a><br><br>
-      <a class="btn btn-primary btn-xl js-scroll-trigger" href="#about">VIEW MORE</a>
+      <a class="btn btn-primary btn-xl js-scroll-trigger" href="#about" style="font-family: 'Roboto', sans-serif;">VIEW MORE</a>
     </div>
     <div class="overlay"></div>
   </header>
@@ -78,8 +78,8 @@
       <div class="row">
         <div class="col-lg-10 mx-auto">
               <!-- <img class="img-fluid" src="img/logo2.png" width="400" alt=""> -->
-          <h2 style="font-family: 'Philosopher', sans-serif;">Green Tester ?</h2>
-          <p class><br>그린테스터는 여러분의 아이디어를 마음껏 테스트하도록 돕습니다.
+          <h2 style="font-family: 'Roboto', sans-serif;">Green Tester ?</h2>
+          <p class style="font-family: 'Noto Sans KR', sans-serif;"><br>그린테스터는 여러분의 아이디어를 마음껏 테스트하도록 돕습니다.
           </p>
           <p>
             <br><b>당신의 아이디어를 원하는 타겟에게 원하는 만큼 테스트 해보세요.</b>
@@ -92,7 +92,7 @@
                           <div class="card py-4 h-100">
                               <div class="card-body text-center">
                                   <!-- <i class="fas fa-map-marked-alt text-primary mb-2"></i> -->
-                                  <h4 class="text-uppercase m-0">User Test</h4>
+                                  <h4 class="text-uppercase m-0" style="font-family: 'Roboto', sans-serif;">User Test</h4>
                                   <hr class="my-4" />
                                   <!--text-black-숫자 에서 숫자에 따라 글씨 커지고 작아지고-->
                                   <div class="small text-black-60" >현재 서비스에 대한 사용자들의 의견, 개선점과 문제점, 버그/에러 등을 들어보세요. <br>현 서비스의 문제점을 확인해 보세요. </div>
@@ -103,7 +103,7 @@
                           <div class="card py-4 h-100">
                               <div class="card-body text-center">
                                   <!--<i class="fas fa-envelope text-primary mb-2"></i> -->
-                                  <h4 class="text-uppercase m-0">Tester</h4>
+                                  <h4 class="text-uppercase m-0" style="font-family: 'Roboto', sans-serif;">Tester</h4>
                                   <hr class="my-4" />
                                   <div class="small text-black-60">전문가가 아닌 서비스를 사용하는 일반인들로 구성된 테스터들로써 시장 검증에 도움을 드립니다.</div>
                               </div>
@@ -113,7 +113,7 @@
                           <div class="card py-4 h-100">
                               <div class="card-body text-center">
                                   <!-- <i class="fas fa-mobile-alt text-primary mb-2"></i>-->
-                                  <h4 class="text-uppercase m-0">Marketing</h4>
+                                  <h4 class="text-uppercase m-0" style="font-family: 'Roboto', sans-serif;">Marketing</h4>
                                   <hr class="my-4" />
                                   <div class="small text-black-60">테스터들을 통해 자연스러운 초기 마케팅에 도움이 됩니다.</div>
                               </div>
@@ -132,8 +132,8 @@
   <section class="content-section bg-primary text-white text-center" id="services" style="font-family: 'Nanum Gothic Coding', monospace;" >
     <div class="container">
       <div class="content-section-heading">
-        <h3 class="text-secondary mb-0">Process 1</h3>
-        <h2 class="mb-5" style="font-family: 'Philosopher', sans-serif;">Service Process</h2>
+        <h3 class="text-secondary mb-0" style="font-family:'Roboto', sans-serif;">Process 1</h3>
+        <h2 class="mb-5" style="font-family:'Roboto', sans-serif;">Service Process</h2>
       </div>
       <div class="row">
         <div class="col-lg-3 col-md-6 mb-5 mb-lg-0">
@@ -150,7 +150,7 @@
             <i class="icon-pencil"></i>
           </span>
           <h4>
-            <strong>의견 정리</strong>
+            <strong>테스트지 작성</strong>
           </h4>
           <p class="text-faded mb-0">테스트를 통해 알고자 하는 점을 <br>문서로 정리합니다.</p>
         </div>
@@ -181,8 +181,8 @@
       <section class="content-section bg-primary" id="portfolio" style="font-family: 'Nanum Gothic Coding', monospace;">
           <div class="container">
             <div class="content-section-heading text-center">
-              <h3 class="text-secondary mb-0">Process 2</h3>
-              <h2 class="mb-5" style="font-family: 'Philosopher', sans-serif;">Test Process</h2>
+              <h3 class="text-secondary mb-0" style="font-family:'Roboto', sans-serif;">Process 2</h3>
+              <h2 class="mb-5" style="font-family:'Roboto', sans-serif;">Test Process</h2>
             </div>
             <div class="row no-gutters">
               <div class="col-lg-6">
@@ -240,8 +240,8 @@
       <h2 class="mx-auto mb-5 " style="font-family: 'Philosopher', sans-serif; font-size: 30px" >지금, 고객의 소리를 들어 보세요 !<br>
          <h3 style="font-size:15px"><span style="color:rgb(243, 173, 61)"> 베타 테스트</span>로 모든 비용은 무료로 진행됩니다. <br>그린 테스터와 함께 당신의 서비스에 대한 고객의 의견을 들어보세요.
         </h3>
-      </h2><br><br>
-      <a href="index2.html" style="color:green" target="_blank"><b>테스트 하러 가기! </b></a><br><br>
+      </h2><br>
+      <a href="index2.html" style="color:#12dd20" target="_blank"><b>테스트 하러 가기! </b></a><br><br>
       <h6>* 현재 테스터들은 20대로만 구성되어 있어 서비스의 타겟이 20대인 서비스만 테스트가 가능합니다.</h6><br><br>
       <img class="img-fluid" src="img/TestIcon.jpg" width="600" alt="">
       <!-- <br><a class="btn btn-primary btn-xl" href="https://startbootstrap.com/template-overviews/stylish-portfolio/">테스트 하러 가기!</a>
@@ -253,11 +253,11 @@
 
 
   <!--Portfolio 페이지-->
-  <div class="section section-gray section-clients" id="portfolio2" style="font-family: 'Nanum Gothic Coding', monospace; " >
+  <div class="section section-gray section-clients" id="portfolio2" style="font-family: 'Noto Sans KR', sans-serif;" >
     <div class="container text-center">
         <h4 class="header-text"><br><br><br><br><br><br>고객의 소리를 들은 서비스</h4>
         <p>
-          <marquee direction="right"><h4> Welcome to <em>your</em> customer-centered Service!</h4><br></marquee>
+          <marquee direction="right" style="font-family: 'Roboto', sans-serif;"><h4> Welcome to <em>your</em> customer-centered Service!</h4><br></marquee>
            
         </p>
         <img class="img-fluid" src="img/customer.png" width="800" alt="">
@@ -268,9 +268,9 @@
   <!-- Contact Us 페이지, 여기서 테스터 지원하기 버튼! -->
   <section class="content-section bg-primary text-white" id="Contact" style="font-family: 'Nanum Gothic Coding', monospace;">
     <div class="container text-center">
-      <h2 class="mb-4" style="font-family: 'Philosopher', sans-serif;">Contact Us...</h2>
+      <h2 class="mb-4" style="font-family: 'Roboto', sans-serif;">Contact Us...</h2>
       <br>
-      <h6 style="font-size: 20px;">E-mail: gajahcompany@gmail</h6>
+      <h6 style="font-size: 20px;font-family: 'Roboto', sans-serif;" >E-mail: gajahcompany@gmail</h6>
       <br>
       <br>
       <dirv>
@@ -283,30 +283,29 @@
 
 
   <!-- Footer -->
-  <footer class="footer text-center">
+  <footer class="footer text-center" style="background-color:black; opacity: 0.9;">
       <div class="container">
           <nav class="pull-left">            
-              <a href="#">
-                  <span style="font-size:20px; color: grey; font-family:'Cinzel', serif;">Company</span>
+              <a href="index3.html">
+                  <span style="font-size:20px; color: rgb(229, 250, 224); font-family:'Roboto', sans-serif;">Company</span>
               </a>
               &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;
-              <a href="https://blog.naver.com/gajahcompany">
-                <span style="font-size:20px; color: grey; font-family:'Cinzel', serif;" >Blog</span>
+              <a href="https://blog.naver.com/gajahcompany" target="_blank">
+                <span style="font-size:20px; color:rgb(229, 250, 224); font-family: 'Roboto', sans-serif;" >Blog</span>
               </a>
               &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;
-               <a href="#">
-                  <span style="font-size:20px; color: grey ; font-family:'Cinzel', serif;">  Tester</span>
+               <a href="index4.html">
+                  <span style="font-size:20px; color: rgb(229, 250, 224) ; font-family: 'Roboto', sans-serif;">  Tester</span>
                 </a>
            </nav>
-          <br><br> <img class="img-fluid" src="img/bottomlogo.png" width="200" alt=""><br>
-           <div class="copyright">
-              <span style="font-size:15px; text-emphasis-position: center">Copyright &copy; GAJAH 2019. All Rights Reserved</span>
-              <br><span style="font-size:15px; text-emphasis-position: center">gajahcompany@gmail.com</span>
-              <br><span style="font-size:12px; text-emphasis-position: center">사업자 등록 번호: 642-12-01053</span>
-              <br><span style="font-size:12px; text-emphasis-position: center">통신 판매업:</span>
+          <br><img class="img-fluid" src="img/1logo.png" width="300" alt=""><br>
+           <div class="copyright" style="color:rgb(229, 250, 224)">
+              <span style="font-size:15px; text-emphasis-position: center; font-family: 'Roboto', sans-serif;">Copyright &copy; GAJAH 2019. All Rights Reserved</span>
+              <br><span style="font-size:15px; text-emphasis-position: center; font-family: 'Roboto', sans-serif;">gajahcompany@gmail.com</span>
+              <br><span style="font-size:12px; text-emphasis-position: center; ">사업자 등록 번호: 642-12-01053</span>
+              <span style="font-size:12px; text-emphasis-position: center">&nbsp; 통신 판매업:</span>
               <br><span style="font-size:12px; text-emphasis-position: center">대표자: 고수열</span>
           </div>
-
         </div>
   </footer>
 
