--- a/index2.html
+++ b/index2.html
@@ -69,51 +69,29 @@
             <h3 class="text-secondary mb-0">Process 1</h3>
             <h2 class="mb-5" style="font-family: 'Philosopher', sans-serif;">테스트지 작성</h2>
           </div>
+
+    <!-- 테스터지 작성 페이지 -> "손지현 전문" -->
+    <section class="callout2" id="price" style="font-family: 'Nanum Gothic Coding', monospace;">
+        <div class="container text-center">
+            <div class="content-section-heading text-center">
+                <h3 class="text-secondary mb-0">이곳은</h3>
+               <h2 class="mx-auto mb-5 " style="font-family: 'Philosopher', sans-serif; font-size: 30px" >손지현이 적을 공간<br>
+             </div>
+  
+            <h3 style="font-size:15px"><span style="color:rgb(243, 173, 61)"> 베타 테스트</span>로 모든 비용은 무료로 진행됩니다. <br>그린 테스터와 함께 당신의 서비스에 대한 고객의 의견을 들어보세요.
+            </h3>
+          </h2><br><br>
+          <a href="#" style="color:green"><b>테스트 하러 가기! </b></a><br><br>
+          <h6>* </h6><br><br>
+          <img class="img-fluid" src="img/TestIcon.jpg" width="600" alt=""><br>
+        
+         </div>
+      </section>
+
+
       <div class="row">
         <div class="col-lg-10 mx-auto">
-              <!-- <img class="img-fluid" src="img/logo2.png" width="400" alt=""> -->
-          <h2 style="font-family: 'Philosopher', sans-serif;">Green Tester ?</h2>
-          <p class>저희는 개발/출시 전,후 각 단계의 IT 서비스들을 <br>실제 사용자들로 구성된 테스터들에게 사용자 테스트를 진행해 드리는 서비스입니다.
-          </p>
-          <p>
-            <br><b>그린 테스터가 제공하는 3가지 !</b>
-          </p>
-          <section class="contact-section bg-black">
-              <div class="container">
-                  <div class="row">
-                      <div class="col-md-4 mb-3 mb-md-0">
-                          <div class="card py-4 h-100">
-                              <div class="card-body text-center">
-                                  <i class="fas fa-map-marked-alt text-primary mb-2"></i>
-                                  <h4 class="text-uppercase m-0">사용자 테스트</h4>
-                                  <hr class="my-4" />
-                                  <!--text-black-숫자 에서 숫자에 따라 글씨 커지고 작아지고-->
-                                  <div class="small text-black-60" >현재 서비스에 대한 사용자들의 의견, 개선점과 문제점, 버그/에러 등을 찾을 수 있습니다.</div>
-                              </div>
-                          </div>
-                      </div>
-                      <div class="col-md-4 mb-3 mb-md-0">
-                          <div class="card py-4 h-100">
-                              <div class="card-body text-center">
-                                  <i class="fas fa-envelope text-primary mb-2"></i>
-                                  <h4 class="text-uppercase m-0">테스터</h4>
-                                  <hr class="my-4" />
-                                  <div class="small text-black-60">전문가가 아닌 서비스를 실제 사용하는 일반인들로 구성된 테스터들로써 시장 검증에 도움을 드릴 수 있습니다.</div>
-                              </div>
-                          </div>
-                      </div>
-                      <div class="col-md-4 mb-3 mb-md-0">
-                          <div class="card py-4 h-100">
-                              <div class="card-body text-center">
-                                  <i class="fas fa-mobile-alt text-primary mb-2"></i>
-                                  <h4 class="text-uppercase m-0">마케팅</h4>
-                                  <hr class="my-4" />
-                                  <div class="small text-black-60">초기 마케팅을 도움이 됩니다.</div>
-                              </div>
-                          </div>
-                      </div>
-                  </div> 
-              </div><br>
+
               <a class="btn btn-primary btn-xl js-scroll-trigger" href="#about" style="font-family: 'Philosopher', sans-serif;">다음</a>
           </section>
         </div>
@@ -171,23 +149,7 @@
     <a class="btn btn-primary btn-xl js-scroll-trigger" href="#about" style="font-family: 'Philosopher', sans-serif;">다음</a>
   </section>
  
-  <!-- 테스터 선택 페이지 -->
-  <section class="callout" id="price" style="font-family: 'Nanum Gothic Coding', monospace;">
-    <div class="container text-center">
-        <div class="content-section-heading text-center">
-            <h3 class="text-secondary mb-0">Process 2</h3>
-            <h2 class="mx-auto mb-5 " style="font-family: 'Philosopher', sans-serif; font-size: 30px" >테스터 선택하기<br>
-          </div>
 
-         <h3 style="font-size:15px"><span style="color:rgb(243, 173, 61)"> 베타 테스트</span>로 모든 비용은 무료로 진행됩니다. <br>그린 테스터와 함께 당신의 서비스에 대한 고객의 의견을 들어보세요.
-        </h3>
-      </h2><br><br>
-      <a href="#" style="color:green"><b>테스트 하러 가기! </b></a><br><br>
-      <h6>* 결과 만족도에 따라 그린테스터의 발전을 위해 지원금을 자유롭게 주셔도 됩니다.</h6><br><br>
-      <img class="img-fluid" src="img/TestIcon.jpg" width="600" alt=""><br>
-      <br><a class="btn btn-primary btn-xl js-scroll-trigger" href="#about" style="font-family: 'Philosopher', sans-serif;">다음</a>
-      </div>
-  </section>
 
 
   <!-- Footer -->
